--- a/Slit-v1/web/index.html
+++ b/Slit-v1/web/index.html
@@ -26,11 +26,11 @@ and open the template in the editor.
             </form>  
             
             <form action="addStudentServlet" method="post">
-                id:<input type ="text" name ="id">  <br>
-                firstName:<input type ="text" name ="firstName">  <br>
-                lastName:<input type ="text" name ="lastName">  <br>
-                email:<input type ="text" name ="email">  <br>
-               pass:<input type ="text" name ="password">  <br>
+                Id:<input type ="text" name ="id">  <br>
+                FirstName:<input type ="text" name ="firstName">  <br>
+                LastName:<input type ="text" name ="lastName">  <br>
+                Email:<input type ="text" name ="email">  <br>
+               Password:<input type ="text" name ="pass">  <br>
              <input type="Submit" name="hent" value="Legg til Student">        
             </form>  
             
